--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -69,12 +71,12 @@
               <div class="popover-cart-content">
                 <ul class="popover-cart-list">
                   <li class="popover-cart-item cart-item">
-                    <img src="images/catalog/self1-catalog.jpg" width="39px" height="43px" alt="">
+                    <img src="images/catalog/self1-catalog.jpg" width="39" height="43" alt="">
                     <p>Любительская<br> селфи-палка</p>
                     <button class="popover-cart-item-close" type="button"></button>
                   </li>
                   <li class="popover-cart-item cart-item">
-                    <img src="images/catalog/self2-catalog.jpg" width="39px" height="43px" alt="">
+                    <img src="images/catalog/self2-catalog.jpg" width="39" height="43" alt="">
                     <p>Профессиональная<br> селфи-палка</p>
                     <button class="popover-cart-item-close" type="button"></button>
                   </li>
@@ -143,7 +145,7 @@
 
     <main>
       <header class="inner-header">
-        <h1 class="inner-header-title">Моноподы для селфи</h1>
+        <h2 class="inner-header-title">Моноподы для селфи</h2>
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">Главная</a>
@@ -165,10 +167,10 @@
               <div class="range">
                 <div class="range-scale">
                   <div class="range-bar" style="left: 0; width: 119px">
-                    <button class="range-toggle toggle-min">
+                    <button class="range-toggle toggle-min" type="button">
                       <span class="visually-hidden">Изменить минимальную цену.</span>
                     </button>
-                    <button class="range-toggle toggle-max">
+                    <button class="range-toggle toggle-max" type="button">
                       <span class="visually-hidden">Изменить максимальную цену.</span>
                     </button>
                   </div>
@@ -253,9 +255,10 @@
               </select>
               <ul class="button-updown">
                 <li class="updown-item">
-                  <a class="sorting-button-updown" href="#" >
+                  <span class="visually-hidden">Вверх</span>
+                  <a class="sorting-button-updown" href="#">
                     <svg width="12" height="10" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                      <g opacity="0.2" clip-path="url(#clip0_26965_679)">
+                      <g clip-path="url(#clip0_26965_679)">
                       <path d="M6 0L11.5 10H0.5" fill="black"/>
                       </g>
                       <defs>
@@ -267,9 +270,10 @@
                   </a>
                 </li>
                 <li class="updown-item">
+                  <span class="visually-hidden">Вниз</span>
                   <a class="sorting-button-updown" href="#">
                     <svg width="12" height="10" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                      <g opacity="0.2" clip-path="url(#clip0_26965_682)">
+                      <g clip-path="url(#clip0_26965_682)">
                       <path d="M6 10L0.499999 9.61651e-07L11.5 0" fill="black"/>
                       </g>
                       <defs>
@@ -280,12 +284,12 @@
                     </svg>
                   </a>
                 </li>
+              </ul>
             </div>
-            </ul>
             <ul class="product-list">
               <li class="product-card">
                 <a class="product-card-link" href="product.html">
-                  <img class="product-card-image" src="images/catalog/self1-catalog.jpg" width="360px" height="380px" alt="">
+                  <img class="product-card-image" src="images/catalog/self1-catalog.jpg" width="360" height="380" alt="Любительская селфи-палка.">
                   <h3 class="product-card-title">Любительская селфи-палка</h3>
                   <b class="product-card-price">500 ₽</b>
                   <span class="button">Подробнее</span>
@@ -293,7 +297,7 @@
               </li>
               <li class="product-card">
                 <a class="product-card-link" href="product.html">
-                  <img class="product-card-image" src="images/catalog/self2-catalog.jpg" width="360px" height="380px" alt="">
+                  <img class="product-card-image" src="images/catalog/self2-catalog.jpg" width="360" height="380" alt="Профессиональная селфи-палка.">
                   <h3 class="product-card-title">Профессиональная селфи-палка</h3>
                   <b class="product-card-price">1500 ₽</b>
                   <span class="button">Подробнее</span>
@@ -301,7 +305,7 @@
               </li>
               <li class="product-card">
                 <a class="product-card-link" href="product.html">
-                  <img class="product-card-image" src="images/catalog/self3-catalog.jpg" width="360px" height="380px" alt="">
+                  <img class="product-card-image" src="images/catalog/self3-catalog.jpg" width="360" height="380" alt="Непотопляемая селфи-палка.">
                   <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
                   <b class="product-card-price">2500 ₽</b>
                   <span class="button">Подробнее</span>
@@ -309,7 +313,7 @@
               </li>
               <li class="product-card">
                 <a class="product-card-link" href="product.html">
-                  <img class="product-card-image" src="images/catalog/self4-catalog.jpg" width="360px" height="380px" alt="">
+                  <img class="product-card-image" src="images/catalog/self4-catalog.jpg" width="360" height="380" alt="Селфи-палка Следуй за мной.">
                   <h3 class="product-card-title">Селфи-палка "Следуй за мной"</h3>
                   <b class="product-card-price">1500 ₽</b>
                   <span class="button">Подробнее</span>
@@ -355,7 +359,7 @@
       <div class="page-footer-container">
         <div class="footer-contacts">
           <a class="logo-footer-link" href = "#">
-            <img class="logo-footer" src="images/footer-icon/yellow-logotip.svg" alt="Логотип Device">
+            <img class="logo-footer" src="images/footer-icon/yellow-logotip.svg" alt="Логотип Device.">
           </a>
           <address class=" ">
             <p class="about-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -376,6 +380,7 @@
           <ul class="footer-social-network-list">
             <li class="footer-social-network-list-item">
               <a class="footer-social-network-links" href="#">
+                <span class="visually-hidden">Телеграм</span>
                 <span class="footer-social-network-wrapper">
                   <svg class="footer-social-network-telegram" width="14" height="12" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_26956_1193)">
@@ -392,6 +397,7 @@
             </li>
             <li class="footer-social-network-list-item">
               <a class="footer-social-network-links" href="#">
+                <span class="visually-hidden">Ютуб</span>
                 <span class="footer-social-network-wrapper">
                   <svg class="footer-social-network-youtube" width="16" height="11" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.6671 1.67464C15.5765 1.35146 15.4 1.05887 15.1564 0.827973C14.9059 0.589975 14.5989 0.41973 14.2644 0.333306C13.0124 0.00330585 7.99641 0.00330593 7.99641 0.00330593C5.9053 -0.0204856 3.8147 0.0841556 1.73641 0.316639C1.40187 0.409448 1.09545 0.583497 0.844411 0.823306C0.597745 1.06064 0.419078 1.35331 0.325745 1.67397C0.10154 2.8818 -0.00739387 4.1082 0.000411455 5.33664C-0.00758854 6.56397 0.101078 7.78997 0.325745 8.99931C0.417078 9.31864 0.595078 9.60997 0.842411 9.84531C1.08974 10.0806 1.39774 10.2506 1.73641 10.3406C3.00508 10.67 7.99641 10.67 7.99641 10.67C10.0902 10.6938 12.1835 10.5892 14.2644 10.3566C14.5989 10.2702 14.9059 10.1 15.1564 9.86197C15.3999 9.63112 15.5762 9.33849 15.6664 9.01531C15.8965 7.80794 16.0083 6.58103 16.0004 5.35197C16.0177 4.11771 15.906 2.88502 15.6671 1.67397V1.67464ZM6.40174 7.61931V3.05464L10.5751 5.33731L6.40174 7.61931Z" fill="#444444"/>
@@ -401,6 +407,7 @@
             </li>
             <li class="footer-social-network-list-item">
               <a class="footer-social-network-links" href="#">
+                <span class="visually-hidden">Твиттер</span>
                 <span class="footer-social-network-wrapper">
                   <svg class="footer-social-network-twitter" width="15" height="15" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                     <path d="M9.7 0.155143C11.2 -0.344857 12.3 0.455143 12.9 1.25514C13.4 1.05514 14 0.855143 14.6 0.655143C14.6 1.45514 14.1 2.05514 13.8 2.25514C14.5 2.45514 15 1.85514 15 1.85514C14.9 2.75514 14.1 3.55514 13.6 3.75514C13.4 10.0551 10.8 14.1551 4.7 14.0551C4.2 14.0551 4.8 14.0551 4.3 14.0551C4 14.0551 0.6 13.6551 0 12.2551C2 12.4551 3.4 11.8551 4.1 11.1551C3.3 10.8551 1.7 10.7551 1.5 8.35514C1.8 8.55514 2 8.65514 2.6 8.55514C1.5 7.75514 0.3 7.05514 0.4 5.05514C0.7 5.35514 1.3 5.55514 1.6 5.45514C1 5.25514 -0.2 2.35514 0.8 0.855143C2.4 2.55514 4.1 4.25514 7.1 4.35514C7.3 2.25514 8.1 0.855143 9.7 0.155143Z" fill="#444444"/>
